--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,46 +42,46 @@
 
 
 
-
-
-<mat-drawer-container class="example-container" autosize  >
-
-
-
-
-  <mat-drawer #drawer class="example-sidenav side-nav-style" mode="side">
-    <!--<p>Auto-resizing sidenav</p>-->
-    <!--<p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
-    <!--<button (click)="showFiller = !showFiller" mat-raised-button>-->
-      <!--Toggle extra text-->
-    <!--</button>-->
-    <div class="row  ">
-      <div class=" col s12 ">
-        <mat-list >
-          <mat-list-item  class="marin-top">Tech support (Live chat)</mat-list-item>
-          <mat-divider></mat-divider>
+<mat-drawer #drawer class="example-sidenav side-nav-style" mode="side">
+  <!--<p>Auto-resizing sidenav</p>-->
+  <!--<p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
+  <!--<button (click)="showFiller = !showFiller" mat-raised-button>-->
+  <!--Toggle extra text-->
+  <!--</button>-->
+  <div class="row  ">
+    <div class=" col s12 ">
+      <mat-list >
+        <mat-list-item  class="marin-top">Tech support (Live chat)</mat-list-item>
+        <mat-divider></mat-divider>
 
 
 
-          <mat-list-item class="marin-top">Request A Feature</mat-list-item>
-          <mat-divider ></mat-divider>
-          <mat-list-item class="marin-top">Recommend A creator</mat-list-item>
+        <mat-list-item class="marin-top">Request A Feature</mat-list-item>
+        <mat-divider ></mat-divider>
+        <mat-list-item class="marin-top">Recommend A creator</mat-list-item>
 
-        </mat-list>
+      </mat-list>
 
-      </div>
-      <div class="col s12 ">
-      </div>
-
-
-
-
+    </div>
+    <div class="col s12 ">
     </div>
 
 
 
 
-  </mat-drawer>
+  </div>
+
+
+
+
+</mat-drawer>
+
+
+<mat-drawer-container class="example-container"    >
+
+
+
+
 
   <div class="example-sidenav-content"  mat-button (click)="drawer.close()">
 
