--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -18,32 +18,32 @@
     <div class="col s12">
       <div class="row" >
         <div class="col s3">
-          <div class="card circular-btn pointer">
-            <div class="card-content center khabri_tab_admin " >
+          <div class=" circular-btn pointer">
+            <div class=" center khabri_tab_admin " >
              Manage User
             </div>
           </div>
         </div>
 
         <div class="col s3">
-          <div class="card circular-btn pointer ">
-            <div class="card-content center khabri_tab_admin " >
+          <div class=" circular-btn pointer ">
+            <div class=" center khabri_tab_admin " >
               Manage Channel
             </div>
           </div>
         </div>
 
         <div class="col s3">
-          <div class="card circular-btn pointer ">
-            <div class="card-content center khabri_tab_admin" >
+          <div class=" circular-btn pointer ">
+            <div class=" center khabri_tab_admin" >
               Manage Tags
             </div>
           </div>
         </div>
 
         <div class="col s3">
-          <div class="card circular-btn pointer">
-            <div class="card-content center  khabri_tab_admin" >
+          <div class=" circular-btn pointer">
+            <div class=" center  khabri_tab_admin" >
               Manage Roles
             </div>
           </div>
