--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -9,7 +9,7 @@
 </div>
 
 
-<mat-drawer-container class="container" autosize >
+<mat-drawer-container class="container"  >
 
 
   <!--admin view start-->
@@ -121,7 +121,7 @@
 
                         <p> {{content.title | limitTo:50}}</p>
 
-                        <img  width="200px" height="150px" src="{{content.imageUrl}}">
+                        <img  width="auto" height="150px" style="max-width: 300px" src="{{content.imageUrl}}">
 
 
                       </div>
