--- a/src/app/add-content/add-content.component.html
+++ b/src/app/add-content/add-content.component.html
@@ -1,6 +1,6 @@
 
 
-  <form class="col s12 " #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
+  <form class="col s12 container-margin " #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
 
     <div class="row">
 
