--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -80,7 +80,7 @@
 
 
 
-      <div class="row " >
+      <div class="row container-margin"  >
 
         <div class="col s12">
 
@@ -138,7 +138,7 @@
 
               <p> <span>#</span>{{content.contentId}}</p>
 
-              <p> {{content.title | limitTo:50}}</p>
+              <p> {{content.title | limitTo:70}}</p>
 
                   <img    width="auto" height="150px" class="container-img" src="{{content.imageUrl}}">
 
