--- a/src/styles.css
+++ b/src/styles.css
@@ -209,6 +209,18 @@ div.error-message i{
 
  }
 
+.container-margin{
+  margin-left: 3%;
+  margin-right: 3%;
+
+
+}
+
+.admin_container-margin {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
   .container-img{
     max-width: 190px;
